Commit paricoal, lado do back praticamente pronto, falta enviar do front para testar.